[package]
name = "timeline_syncobj"
version = "0.1.0"
edition = "2024"
license = "MIT-0/Apache-2.0"

[features]
default = ["tokio"]
tokio = ["dep:tokio"]

[dependencies]
bitflags = "2.10.0"
derive_more = { version = "2.1.1", features = ["deref"] }
rustix = { version = "1.1.3", features = ["event", "fs"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["net"], optional = true }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["net", "rt"], optional = true }
