[package]
name = "timeline_syncobj"
version = "0.1.1"
edition = "2024"
license = "MIT-0/Apache-2.0"
description = "bindings for the timeline variant of drm_syncobjs"
repository = "https://github.com/Schmarni-Dev/timeline_syncobj"

[features]
default = []
tokio = ["dep:tokio", "rustix/event"]

[dependencies]
bitflags = "2.10.0"
derive_more = { version = "2.1.1", features = ["deref"] }
rustix = { version = "1.1.3", features = ["fs"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["net"], optional = true }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["net", "rt"] }
